Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,17 +31,28 @@
           <p>This plugin for visual studio has been created to be able to find the errors generated during compilation time on your favourite web browser.</p>
 
 <h3>
+<a id="use" class="anchor" href="#use" aria-hidden="true"><span class="octicon octicon-link"></span></a>Use</h3>
+
+<p>Select one or more errors in your Error List Window. Right click and hit 'Search Error On'.</p>
+
+<p><img src="https://cloud.githubusercontent.com/assets/3071208/8430164/f75af2c2-1f2e-11e5-99c5-ae979995bd3b.png" alt="search on"></p>
+
+<h3>
 <a id="configure" class="anchor" href="#configure" aria-hidden="true"><span class="octicon octicon-link"></span></a>Configure</h3>
+
+<p>Under 'Tools -&gt; Options-&gt; Search Error On' you will be able to select one of your favourite search engines.
+<img src="https://cloud.githubusercontent.com/assets/3071208/8430166/f9b19ff8-1f2e-11e5-91b4-9c7a8aae0e21.png" alt="search on configuration"></p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>@knekotic</p>
+<p><a href="https://github.com/kanekotic" class="user-mention">@kanekotic</a></p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with 'Search Error On...' Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>Having trouble with 'Search Error On...'? Any idea of how to improve it? 
+Review our <a href="https://github.com/Hatisoft/SearchErrorOn/wiki">documentation</a> or <a href="https://github.com/Hatisoft/SearchErrorOn/issues">add issue/recomendation</a> and we’ll sort it out.</p>
         </section>
 
         <aside id="sidebar">
