Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
 
 <p>Having trouble with 'Search Error On...'? Any idea of how to improve it? 
 Review our <a href="https://github.com/Hatisoft/SearchErrorOn/wiki">documentation</a> or <a href="https://github.com/Hatisoft/SearchErrorOn/issues">add issue/recomendation</a> and we’ll sort it out.</p>
+
+<h3>
+<a id="build-state" class="anchor" href="#build-state" aria-hidden="true"><span class="octicon octicon-link"></span></a>Build State</h3>
+
+<p>CI: <a href="https://ci.appveyor.com/project/kanekotic/errorlistsearchon/branch/develop"><img src="https://ci.appveyor.com/api/projects/status/bg07l4rty5i97fgf/branch/develop?svg=true" alt="Build status"></a></p>
+
+<p>Release: <a href="https://ci.appveyor.com/project/kanekotic/errorlistsearchon-qirqb/branch/master"><img src="https://ci.appveyor.com/api/projects/status/fa47gaxfp5w5sy48/branch/master?svg=true" alt="Build status"></a></p>
         </section>
 
         <aside id="sidebar">
@@ -72,6 +79,16 @@ Review our <a href="https://github.com/Hatisoft/SearchErrorOn/wiki">documentatio
       </div>
     </div>
 
-  
+            <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-64624825-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
