--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@ Review our <a href="https://github.com/Hatisoft/SearchErrorOn/wiki">documentatio
         </section>
 
         <aside id="sidebar">
+           <a href="https://github.com/Hatisoft/SearchErrorOn/releases/latest" class="button">
+            <small>Download</small>
+            Latest Build
+          </a>
           <a href="https://github.com/Hatisoft/SearchErrorOn/zipball/master" class="button">
             <small>Download</small>
             .zip file
